--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -224,14 +224,11 @@ import Navbar from "../components/es/Navbar.astro";
 			<h3
 				class="text-center text-4xl mt-10 uppercase text-green-500 font-semibold"
 			>
-				Opinión de clientes
+				Nuestros Sponsors
 			</h3>
 			<div
 				class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 items-center gap-5 mt-10"
 			>
-				<CardClientes />
-				<CardClientes />
-				<CardClientes />
 				<CardClientes />
 			</div>
 		</section>
